--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "material-tic-tac-toe",
-  "version": "0.0.0",
+  "name": "timetracker",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/datetime-picker": "^5.1.1",
     "@angular/animations": "~11.2.7",
     "@angular/cdk": "11.2.6",
     "@angular/common": "~11.2.7",
@@ -22,12 +21,12 @@
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@okta/okta-auth-js": "4.8.0",
     "angular-calendar": "^0.28.26",
     "date-fns": "^2.16.1",
     "hammerjs": "2.0.8",
     "rxjs": "~6.6.0",
-    "tic-tac-toe-minimax": "1.0.8",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
@@ -35,17 +34,8 @@
     "@angular-devkit/build-angular": "~0.1102.6",
     "@angular/cli": "~11.2.6",
     "@angular/compiler-cli": "~11.2.7",
-    "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.5"
