--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular-material-components/datetime-picker": "^5.1.1",
+    "@angular-material-components/moment-adapter": "^5.0.0",
     "@angular/animations": "~11.2.7",
     "@angular/cdk": "11.2.6",
     "@angular/common": "~11.2.7",
