--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "angular-calendar": "^0.28.26",
     "date-fns": "^2.16.1",
     "hammerjs": "2.0.8",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
