Add weekend and hour sliders

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@angular-material-components/datetime-picker": "^5.1.1",
     "@angular-material-components/moment-adapter": "^5.0.0",
+    "@angular-slider/ngx-slider": "^2.0.3",
     "@angular/animations": "~11.2.7",
     "@angular/cdk": "11.2.6",
     "@angular/common": "~11.2.7",
